ensure no overflow on small screens

--- a/stylus/style.styl
+++ b/stylus/style.styl
@@ -213,6 +213,7 @@ main
       background-color $color4
       margin 0.2em 0 2em
       padding 0.5em
+      overflow-x scroll
             
       label
         font-family $font-body
